# XRouting

./: .dockerignore  .gitignore  README.md  go.mod  go.sum  main.go
.devcontainer/: Dockerfile  devcontainer.json
cmd/api/: analytic.go  api.go  auth.go  comment.go  component.go  (+3 more)
pkg/: env.go
scripts/: .gitignore  Dockerfile  README.md  main.py  outut.json  pyproject.toml  requirements.txt  testAnalitics.py
scripts/.devcontainer/: Dockerfile  devcontainer.json
scripts/adapters/: dyto3.py
scripts/adapters/boto3/: boto.py
scripts/adapters/db/: README.md  dbConnection.py  dynamoDbManager.py
scripts/adapters/http/: apiClient.py  apiDtos.py  httpClient.py
scripts/adapters/repositories/: analyticRepository.py  commentsRepository.py  componentRepository.py  maintenanceRepository.py
scripts/core/entities/: analytic.py  analyticTypes.py  comment.py  component.py  maintenance.py  subComponent.py  subComponentFailure.py  user.py
scripts/core/repositories/: analyticRepository.py  baseRepository.py  commentsRepository.py  component.py  componentRepository.py  maintenance.py  maintenanceRepository.py  subComponent.py  subComponentFailure.py  subComponentRepository.py  userRepository.py
scripts/deploy/: README.md  deploy_lambda.sh
scripts/migration/: createTables.py  generateUsers.py  insert.py
scripts/ports/: analyticServices.py  commentServices.py  componentServices.py  maintainceServices.py  subComponentServices.py
scripts/utils/: logger.py
web/: .dockerignore  Dockerfile  index.html  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
(+74 files in other folders)
