[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "x_sripts"
authors = [
    {name = "luisdaniel.ta", email = "luisdaniel.ta@outlook.com"},
]

description = ""
readme = "README.md"
requires-python = ">=3.12"
dynamic = ["version"]

[tool.setuptools.packages.find]
where = ["."]
include = ["core*", "utils*", "app*", "adapters*", "ports*", "migration*"]
namespaces = false